@@ -71,18 +71,6 @@ public class BufferUpdate extends EBMessage
 	public static final Object MODE_CHANGED = "MODE_CHANGED";
 
 	/**
-	 * Character encoding changed.
-	 * @since jEdit 3.2pre4
-	 */
-	public static final Object ENCODING_CHANGED = "ENCODING_CHANGED";
-
-	/**
-	 * Fold handler changed.
-	 * @since jEdit 4.0pre1
-	 */
-	public static final Object FOLD_HANDLER_CHANGED = "FOLD_HANDLER_CHANGED";
-
-	/**
 	 * Buffer saving.
 	 */
 	public static final Object SAVING = "SAVING";
@@ -92,6 +80,12 @@ public class BufferUpdate extends EBMessage
 	 * @since jEdit 4.0pre4
 	 */
 	public static final Object SAVED = "SAVED";
+
+	/**
+	 * Properties changed.
+	 * @since jEdit 4.1pre1
+	 */
+	public static final Object PROPERTIES_CHANGED = "PROPERTIES_CHANGED";
 	//}}}
 
 	//{{{ BufferUpdate constructor
